curl-with-ambassador.yml
apiVersion: v1
kind: Pod
metadata:
  name: curl-with-ambassador
spec:
  containers:
    - name: main
      image: curlimages/curl
      command: ['sleep', '9999999']
    - name: ambassador
      image: luksa/kubectl-proxy:1.8.0
