fortune-pod-args.yml
apiVersion: v1
kind: Pod
metadata:
  name: fortune2s
spec:
  containers:
    - image: mouseonthetree/fortune:args
      args: ['2']
      name: html-generator
      volumeMounts:
        - name: html
          mountPath: /var/htdocs
  volumes:
    - name: html
      emptyDir: {}
