fortune-pod-env-cm.yml
apiVersion: v1
kind: Pod
metadata:
  name: fortunecm
spec:
  containers:
    - image: mouseonthetree/fortune:env
      imagePullPolicy: Always
      name: html-generator
      volumeMounts:
        - name: html
          mountPath: /var/htdocs
  volumes:
    - name: html
      emptyDir: {}
