kubia-manual-with-label.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kubia-manual-v2
  labels:
    create-method: manual
    env: prod
spec:
  containers:
    - image: mouseonthetree/kubia
      name: kubia
      ports:
        - containerPort: 8080
          protocol: TCP
