kubia-private.yml
apiVersion: v1
kind: Pod
metadata:
  name: kubia-private
spec:
  imagePullSecrets:
    - name: mydockerhubsecret
  containers:
    - image: mouseonthetree/mousefun:test
      name: test
